--- a/src/main/resources/templates/Lieux/allLieux.html
+++ b/src/main/resources/templates/Lieux/allLieux.html
@@ -1,11 +1,12 @@
-<html xmlns:layout="http://www.w3.org/1999/xhtml" layout:decorate="~{fragments/main_layout}">
+<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml"
+      layout:decorate="~{fragments/main_layout}">
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>Tous les lieux</title>
 </head>
-<div layout:fragment="content" class="container">
-    <div class ="container mt-3">
+<div layout:fragment="content" class="container mt-3 mb-3">
+    <div class ="container">
         <div class="card">
             <div class="card-header">
                 Liste des Lieux
@@ -18,8 +19,8 @@
                         <th>Commune </th>
                         <th>longitude</th>
                         <th>latidute</th>
-                        <th>Edition</th>
-                        <th>Suppression</th>
+                        <th sec:authorize="hasRole('ROLE_ADMIN')">Edition</th>
+                        <th sec:authorize="hasRole('ROLE_ADMIN')">Suppression</th>
                     </tr>
                     <tr th:each="l:${lieux}">
                         <td th:text="${l.codeInsee}"></td>
@@ -27,9 +28,9 @@
                         <td th:text="${l.nomCom}"></td>
                         <td th:text="${l.longitude}"></td>
                         <td th:text="${l.latitude}"></td>
-                        <td><a class="btn btn-success" th:href="@{editLieu(id=${l.codeInsee})}">Editer</a></td>
+                        <td sec:authorize="hasRole('ROLE_ADMIN')"><a class="btn btn-success" th:href="@{editLieu(id=${l.codeInsee})}">Editer</a></td>
 
-                        <td><a class="btn btn-danger" onclick="return confirm('Confirmez la suppression ?')"
+                        <td sec:authorize="hasRole('ROLE_ADMIN')"><a class="btn btn-danger" onclick="return confirm('Confirmez la suppression ?')"
                                th:href="@{deleteLieu(id=${l.codeInsee})}">Supprimer</a></td>
 
                     </tr>
