--- a/src/main/resources/templates/Celebrites/celebriteForm.html
+++ b/src/main/resources/templates/Celebrites/celebriteForm.html
@@ -6,12 +6,12 @@
     <title>Celebrité form</title>
 </head>
 <div layout:fragment="content" class="container" id="celebriteForm">
-    <div class="container mt-5" sec:authorize="hasRole('ROLE_ADMIN')">
+    <div class="container" sec:authorize="hasRole('ROLE_ADMIN')">
         <div class="card">
             <div class="card-header" th:if="${mode=='new'}"> Ajouter une celebrité </div>
             <div class="card-header" th:if="${mode=='edit'}">Modifier une celebrité </div>
             <div class="card-body">
-                <form name ="celebrite" action="#" th:action="@{/addCelebrite}" method="post">
+                <form name ="celebrite" action="#" th:action="@{/saveCelebrite}" method="post">
                     <div class="form-group" style= "visibility:hidden" th:if="${mode=='edit'}">
                         <label class="control-label">ID de la celibrité :</label>
                         <input type="number" name="numCelebrite" class="form-control"
@@ -45,15 +45,15 @@
                         <input type="text" name="epoque" class="form-control" th:if="${mode=='edit'}"
                                th:value="${celebrite.epoque}"/>
                     </div>
-                    <!--
                     <div class="form-group">
-                        <label class="control-label">Monuments associés:</label>
-                        <input type="text" name="monuments" class="form-control" th:if="${mode=='new'}"
-                               th:value="monuments" />
-                        <input type="text" name="epoque" class="form-control" th:if="${mode=='edit'}"
-                               th:value="${celebrite.monuments}"/>
+                        <label class="control-label">Monuments :</label>
+                        <select  class="form-control" name="monuments" multiple="multiple">
+                            <option th:each="m : ${monuments}"
+                                    th:selected="${m.getCodeM()}"
+                                    th:value="${m.getCodeM()}"
+                                    th:text="${m.getNomM()}">Lieu</option>
+                        </select>
                     </div>
-                    -->
                     <div>
                         <button type="submit" class="btn btn-primary">Valider</button>
                     </div>
