--- a/src/main/resources/templates/Departements/departementForm.html
+++ b/src/main/resources/templates/Departements/departementForm.html
@@ -4,8 +4,8 @@
 <head>
     <title>Departement form</title>
 </head>
-<div layout:fragment="content" class="container" id="departementForm">
-    <div class="container mt-5">
+<div layout:fragment="content" class="container mt-3 mb-3" id="departementForm">
+    <div class="container" sec:authorize="hasRole('ROLE_ADMIN')">
         <div class="card">
             <div class="card-header" th:if="${mode=='new'}"> Ajouter un departement </div>
             <div class="card-header" th:if="${mode=='edit'}">Modifier un departement </div>
