--- a/src/main/resources/templates/Monuments/monumentForm.html
+++ b/src/main/resources/templates/Monuments/monumentForm.html
@@ -5,4 +5,88 @@
     <title>Monument form</title>
 </head>
 <div layout:fragment="content" class="container">
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header" th:if="${mode=='new'}"> Ajout des Monuments </div>
+            <div class="card-header" th:if="${mode=='edit'}">Modification des Monuments </div>
+            <div class="card-body">
+                <form name ="monument" th:action="@{saveMonument}" method="post">
+
+
+                    <div class="form-group" style= "visibility:visible" th:if="${mode=='new'}">
+                        <label class="control-label">Code_M:</label>
+
+                        <input type="text" name="codeM" class="form-control"
+                               th:value="codeM"/>
+                    </div>
+                    <div class="form-group" style= "visibility:hidden" th:if="${mode=='edit'}">
+                        <label class="control-label">Code_M</label>
+
+                        <input type="text" name="codeM" class="form-control"
+                               th:value="${monument.codeM}"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">NomM :</label>
+                        <input type="text" name="nomM" class="form-control" th:if="${mode=='new'}"
+                               th:value= "nomM" />
+                        <input type="text" name="nomM" class="form-control" th:if="${mode=='edit'}"
+                               th:value="${monument.nomM}" />
+                    </div>
+
+            <div class="form-group">
+                <label class="control-label">Proprietaire:</label>
+                <input type="text" name="proprietaire" class="form-control" th:if="${mode=='new'}"
+                       th:value="proprietaire"/>
+                <input type="text" name="proprietaire" class="form-control" th:if="${mode=='edit'}"
+                       th:value="${monument.proprietaire}"/>
+            </div>
+            <div class="form-group">
+                <label class="control-label">TypeMonument :</label>
+                <input type="text" name="typeMonument" class="form-control" th:if="${mode=='new'}"
+                       th:value="typeMonument"/>
+                <input type="text" name="typeMonument" class="form-control"  th:if="${mode=='edit'}"
+                       th:value="${monument.typeMonument}"/>
+            </div>
+            <div class="form-group">
+                <label class="control-label">Longitude:</label>
+                <input type="text" name="longitude" class="form-control" th:if="${mode=='new'}"
+                       th:value="longitude" />
+                <input type="text" name="longitude" class="form-control" th:if="${mode=='edit'}"
+                       th:value="${monument.longitude}"/>
+            </div>
+            <div>
+                <div class="form-group">
+                    <label class="control-label">Latitude:</label>
+                    <input type="text" name="latitude" class="form-control" th:if="${mode=='new'}"
+                           th:value="latitude" />
+                    <input type="text" name="latitude" class="form-control" th:if="${mode=='edit'}"
+                           th:value="${monument.latitude}"/>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Localité :</label>
+                    <select class="form-control" name="localite">
+
+                        <option th:each="l : ${lieux}"
+                                th:value="${l.getCodeInsee()}"
+                                th:text="${l.getCodeInsee()}">Lieu</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Celibrites :</label>
+                    <select class="form-control" name="celebrites" multiple="multiple">
+                        <option th:each="c : ${celebrites}"
+                                th:selected="${c.getNumCelebrite()}"
+                                th:value="${c.getNumCelebrite()}"
+                                th:text="${c.getNom()}">Lieu
+                        </option>
+                    </select>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Valider</button>
+            </div>
+            </form>
+            </div>
+        </div>
+    </div>
 </div>
+</html>
