--- a/src/main/resources/templates/Departements/allDepartements.html
+++ b/src/main/resources/templates/Departements/allDepartements.html
@@ -6,6 +6,10 @@
     <title>Tous les departements</title>
 </head>
 <div layout:fragment="content" class="container mt-3 mb-3">
+    <div class="card table-responsive">
+        <div class="card-header">
+            Liste des departements
+        </div>
     <div class="card-body">
         <table class="table table-striped">
             <tr>
