--- a/src/main/resources/templates/Lieux/allLieux.html
+++ b/src/main/resources/templates/Lieux/allLieux.html
@@ -6,13 +6,13 @@
     <title>Tous les lieux</title>
 </head>
 <div layout:fragment="content" class="container mt-3 mb-3">
-    <div class ="container">
-        <div class="card">
-            <div class="card-header">
+    <div class ="container ">
+        <div class="card table-responsive">
+            <div class="card-header ">
                 Liste des Lieux
             </div>
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table  table-striped">
                     <tr>
                         <th>codeInsee</th>
                         <th>Departement</th>
