--- a/src/main/resources/templates/Celebrites/allCelebrites.html
+++ b/src/main/resources/templates/Celebrites/allCelebrites.html
@@ -6,12 +6,13 @@
     <title>Toutes les celebrités</title>
 </head>
 <div layout:fragment="content" class="container mt-3 mb-3">
+    <div class="card table-responsive">
     <div class="card-header">
         Liste des Celebrites
 
     </div>
     <div class="card-body">
-        <table class="table table-striped">
+        <table class="table table-responsive table-striped">
             <tr>
                 <th>numCelebrite</th>
                 <th>Nom </th><th>prenom</th>
@@ -44,6 +45,7 @@
         </ul>
         -->
     </div>
+</div>
 </div>
 </div>
 
