--- a/src/main/resources/templates/Monuments/allMonuments.html
+++ b/src/main/resources/templates/Monuments/allMonuments.html
@@ -7,7 +7,7 @@
 </head>
 <div layout:fragment="content" class="container mt-3 mb-3">
     <div class="container">
-        <div class="card">
+        <div class="card table-responsive">
             <div class="card-header">
                 Liste des Monuments
             </div>
