--- a/src/main/resources/templates/Departements/departementForm.html
+++ b/src/main/resources/templates/Departements/departementForm.html
@@ -29,7 +29,7 @@
                         <label class="control-label">NomDep :</label>
                         <input type="text" name="nomDep" class="form-control" th:if="${mode=='new'}"
                                th:value= "nomDep" />
-                        <input type="text" name="Dep" class="form-control" th:if="${mode=='edit'}"
+                        <input type="text" name="nomDep" class="form-control" th:if="${mode=='edit'}"
                                th:value="${departement.nomDep}" />
                     </div>
                     <div class="form-group">
