calcule distance, Super Admin

--- a/src/main/resources/templates/Celebrites/allCelebrites.html
+++ b/src/main/resources/templates/Celebrites/allCelebrites.html
@@ -12,7 +12,7 @@
 
     </div>
     <div class="card-body">
-        <table class="table table-responsive table-striped">
+        <table class="table table-striped">
             <tr>
                 <th>numCelebrite</th>
                 <th>Nom </th><th>prenom</th>
