--- a/src/main/resources/templates/Celebrites/celebriteForm.html
+++ b/src/main/resources/templates/Celebrites/celebriteForm.html
@@ -5,7 +5,7 @@
 <head>
     <title>Celebrité form</title>
 </head>
-<div layout:fragment="content" class="container" id="celebriteForm">
+<div layout:fragment="content" class="container mt-3 mb-3" id="celebriteForm">
     <div class="container" sec:authorize="hasRole('ROLE_ADMIN')">
         <div class="card">
             <div class="card-header" th:if="${mode=='new'}"> Ajouter une celebrité </div>
