--- a/src/main/resources/templates/Monuments/monumentForm.html
+++ b/src/main/resources/templates/Monuments/monumentForm.html
@@ -4,7 +4,7 @@
 <head>
     <title>Monument form</title>
 </head>
-<div layout:fragment="content" class="container">
+<div layout:fragment="content" class="container mt-3 mb-3">
     <div class="container mt-5">
         <div class="card">
             <div class="card-header" th:if="${mode=='new'}"> Ajout des Monuments </div>
