--- a/src/main/resources/templates/Celebrites/celebriteForm.html
+++ b/src/main/resources/templates/Celebrites/celebriteForm.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="control-label">Monuments :</label>
+                        <label class="control-label">Monuments associés :</label>
                         <select  class="form-control" name="monuments" multiple="multiple">
                             <option th:each="m : ${monuments}"
                                     th:selected="${{m}}"
