--- a/src/main/resources/templates/Lieux/lieuForm.html
+++ b/src/main/resources/templates/Lieux/lieuForm.html
@@ -16,7 +16,7 @@
                 <form name ="lieu" action="#" th:action="@{saveLieu}" method="post">
 
                     <div class="form-group" th:if="${mode=='new'}">
-                        <label class="control-label">Code_Insee:</label>
+                        <label class="control-label">Code Insee:</label>
 
                         <input type="text" name="codeInsee" class="form-control"
                                th:value="codeInsee"/>
