--- a/src/main/resources/templates/Monuments/allMonuments.html
+++ b/src/main/resources/templates/Monuments/allMonuments.html
@@ -14,11 +14,11 @@
             <div class="card-body">
                 <table class="table table-striped">
                     <tr>
-                        <th>NomM </th>
+                        <th>Nom monument </th>
                         <th>proprietaire</th>
-                        <th>typeMonument</th>
+                        <th>type du monument</th>
                         <th>Localité</th>
-                        <th>codeLieu</th>
+                        <th>code Lieu</th>
                         <th>longitude</th>
                         <th>latidute</th>
                         <th>Celebrités associées</th>
